--- a/src/app/users/users.component.scss
+++ b/src/app/users/users.component.scss
@@ -1,7 +1,7 @@
 .my-profile {
   width: 1400px;
   max-width: 100%;
-  margin: 0 auto;
+  margin: 3rem auto;
   display: flex;
   .my-info {
     display: flex;
@@ -47,6 +47,51 @@
           }
           span:nth-child(2) {
             color: #b8c3cc;
+          }
+        }
+      }
+      section {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        .edit-user {
+          a {
+            border: none;
+            color: #18a4e1;
+            text-decoration: none;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            cursor: pointer;
+            padding: 0.4rem 0.3rem;
+            border-radius: 20px;
+            img {
+              width: 20px;
+              height: 20px;
+            }
+            span {
+              font-size: 18px;
+            }
+          }
+        }
+        .remove-books {
+          button {
+            background: #ff93a6;
+            border: none;
+            color: #fff;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            cursor: pointer;
+            padding: 0.8rem 0.9rem;
+            border-radius: 20px;
+            img {
+              width: 20px;
+              height: 20px;
+            }
+            span {
+              font-size: 18px;
+            }
           }
         }
       }
@@ -99,6 +144,14 @@
           cursor: no-drop;
         }
         .my-booked {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          left: 0;
+          top: 0;
+          display: flex;
+          justify-content: center;
+          align-items: center;
           img {
             position: absolute;
             top: 5px;
@@ -116,6 +169,16 @@
           background-image: url("/Icons/booked.svg");
           background-size: auto;
           background-repeat: no-repeat;
+          position: absolute;
+          cursor: pointer;
+          width: 100%;
+          height: 100%;
+          top: 0;
+          left: 0;
+        }
+        .free-times-admin {
+          left: 0;
+          top: 0;
           position: absolute;
           cursor: pointer;
           width: 100%;
@@ -155,11 +218,11 @@
       tbody {
         tr {
           &:nth-child(even) {
-            background-color: #f9f9f9; // Zebra stripe effect
+            background-color: #f9f9f9;
           }
 
           &:hover {
-            background-color: #f1f1f1; // Highlight row on hover
+            background-color: #f1f1f1;
           }
           font-weight: 100;
         }
@@ -174,7 +237,8 @@
     right: 2rem;
     bottom: 5rem;
     display: flex;
-    gap: 4rem;
+    gap: 1rem;
+    flex-direction: column;
     button {
       background: #3acf99;
       color: #fff;
@@ -184,10 +248,8 @@
       cursor: pointer;
     }
     .remove {
-      position: relative;
       width: 100%;
       img {
-        position: absolute;
         left: 10px;
         top: 10px;
         width: 10px;
@@ -204,7 +266,8 @@
     right: 2rem;
     bottom: 5rem;
     display: flex;
-    gap: 4rem;
+    gap: 1rem;
+    flex-direction: column;
     button {
       background: #ff93a6;
       color: #fff;
@@ -215,9 +278,8 @@
     }
     .remove {
       position: relative;
-      width: 100%;
+
       img {
-        position: absolute;
         left: 10px;
         top: 10px;
         width: 10px;
