--- a/src/app/doctor-sign-up/doctor-sign-up.component.scss
+++ b/src/app/doctor-sign-up/doctor-sign-up.component.scss
@@ -2,6 +2,18 @@
   width: 1500px;
   max-width: 100%;
   margin: 8rem auto;
+  .doctor-photo {
+    width: 200px;
+    height: 200px;
+    margin-left: 3rem;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center top;
+      border-radius: 50%;
+    }
+  }
   form {
     display: flex;
     flex-wrap: wrap;
