--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,4 +1,5 @@
 <div class="sign-up">
+  <p-toast />
   <form [formGroup]="signUpForm" (ngSubmit)="signUp()">
     <div>
       <div class="input-box">
@@ -114,8 +115,5 @@
       <button type="submit">რეგისტრაცია</button>
     </div>
   </form>
-  <span *ngIf="loading"> Loading... </span>
-  <span *ngIf="result !== null">
-    {{ result }}
-  </span>
+  <p-progressSpinner ariaLabel="loading" *ngIf="loading" />
 </div>
