--- a/src/app/authorization/authorization.component.html
+++ b/src/app/authorization/authorization.component.html
@@ -60,6 +60,10 @@
       </div>
       <p-progressSpinner ariaLabel="loading" *ngIf="isSpinner" />
       <div class="sign-in-btn"><button type="submit">შესვლა</button></div>
+      <asl-google-signin-button
+        type="standard"
+        size="medium"
+      ></asl-google-signin-button>
     </form>
 
     <form
